# multi_process_server

./: CMakeLists.txt  README.md  start_jt1078_server.sh  start_pc_server.sh  top_for_pc_server.sh
3part/ini/: INIReader.h
bench/: tcp_receive_9981.js
conf/: jt1078.ini  pc.ini  srs.ini  web.ini
core/: ini_config.h
core/buffer/: Buffer.cpp  Buffer.h
core/database/: MysqlClient.cpp  MysqlClient.h  RedisClient.cpp  RedisClient.h  RedisMqServer.cpp  RedisMqServer.h
core/eventloop/: EventLoop.cpp  EventLoop.h
core/http_server/: HttpHandler.cpp  HttpHandler.h  HttpServer.cpp  HttpServer.h
core/ipc_packet/: IpcPacket.h  IpcPktDecoder.cpp  IpcPktDecoder.h  IpcPktType.h
core/log/: Log.cpp  Log.hpp
core/pipe/: PipeChannel.cpp  PipeChannel.h  PipeFds.cpp  PipeFds.h  PipePacket.h  PipePktType.h
core/server/: MasterServer.hpp  WorkServer.h
core/socket/: Socket.cpp  Socket.h
core/tcp/: Listener.cpp  Listener.h  TcpClient.cpp  TcpClient.h  TcpError.h  TcpSession.cpp  TcpSession.h
core/time/: TimeUtil.cpp  TimeUtil.h
core/timer/: EventWatcher.cpp  EventWatcher.h  TimerEventWatcher.cpp  TimerEventWatcher.h
core/traffic/: TrafficStat.h
jt1078/: AV_Common_Define.h  CMakeLists.txt  Jt1078ServerVersion.h  Jt1078Service.cpp  Jt1078Service.h  Jt1078Util.cpp  Jt1078Util.h  README.md  main.cpp  stop_jt1078_server.sh  top_for_jt1078_server.sh
jt1078/forward_server/: Channel.cpp  Channel.h  ForwardServer.cpp  ForwardServer.h  Message.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
jt1078/jt1078_server/: CarManager.cpp  CarManager.h  CarSession.cpp  CarSession.h  Jt1078Decoder.cpp  Jt1078Decoder.h  Jt1078Header.h  Jt1078Packet.h  Jt1078Server.cpp  Jt1078Server.h  Jt1078Util.cpp  Jt1078Util.h
jt1078/pub_sub/: Channel.h  Message.h  Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h  tmp.cpp
jt1078_client/: Jt1078Client.cpp  Jt1078Client.h
new_web_server/: AsioTimer.h  CMakeLists.txt  CarTcpClient.cpp  CarTcpClient.h  CarTopicManager.h  CarWebServer.cpp  CarWebServer.h  CarWebServerVersion.h  CarWebSocketServer.cpp  CarWebSocketServer.h  TcpClient.h  TcpConnection.h  WebSocketServer.h  main.cpp  start_new_web_server.sh  stop_new_web_server.sh  top_for_new_web_server.sh
new_web_server/conf/: new_web_server.ini
pc_server/: CMakeLists.txt  Jt1078Client.h  PcManager.cpp  PcManager.h  PcPublisher.cpp  PcPublisher.h  PcServer.cpp  PcServer.h  PcServerVersion.h  PcSession.cpp  PcSession.h  README.md  main.cpp  stop_pc_server.sh
srs_server/: CMakeLists.txt  SrsServerVersion.h  main.cpp
web_server/: CMakeLists.txt  DockerBuild.sh  DockerClear.sh  Dockerfile  WebServerVersion.h  main.cpp  start_web_server.sh
web_server/audio/: Adpcm.cpp  Adpcm.h  CCodec.cpp  CCodec.h  g726.cpp  g726.h
web_server/http/: DeviceIdMgr.cpp  DeviceIdMgr.h  HttpSrsOnSessionHandler.cpp  HttpSrsOnSessionHandler.h  HttpWebOnPlayHandler.cpp  HttpWebOnPlayHandler.h  WebServer.cpp  WebServer.h
web_server/rtmp/: RtmpThread.cpp  RtmpThread.h
web_server/rtmp/RtmpStream/: FFMPEG.h  RtmpClient.cpp  RtmpClient.h  RtmpMgr.cpp  RtmpMgr.h  RtmpStream.cpp  RtmpStream.h
web_server/run_lib/: libfreetype.so.6  libglib-2.0.so.0  libhiredis.so.1.0.0  libssh-gcrypt.so.4  libwavpack.so.1  libxml2.so.2
web_server/thread/: SafeQueue.hpp  WorkThread.hpp
